--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon Projet Flask</title>
+    <title>Page d'Accueil</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Bienvenue dans mon projet Flask!</h1>
+    <h1>Bienvenue sur l'application Flask !</h1>
+    <p>Ceci est une page d'accueil simple sans base de données ni login.</p>
 </body>
 </html>
