--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Bienvenue dans mon projet Flask!</h1>
+    <header>
+        <h1>Bienvenue dans mon projet Flask!</h1>
+        <nav>
+            <a href="/">Accueil</a>
+            <a href="/signIn">Connexion</a>
+        </nav>
+    </header>
+
+    <main>
+        {% block content %}{% endblock %}
+    </main>
+    
 </body>
 </html>
