--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,11 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page d'Accueil</title>
+    <title>DWS</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    
 </head>
 <body>
-    <h1>Bienvenue sur l'application Flask !</h1>
-    <p>Ceci est une page d'accueil simple sans base de données ni login.</p>
+    <header>
+        <h1>DWS</h1>
+        <a href="{{ url_for('main.about') }}">Aller à la page À propos</a>
+        <div class="profile"></div>
+    </header>
+    <main>
+        <h1>Bienvenue, {{ name }} !</h1>
+        <div class="search-container">
+            <div class="tabs">
+                <button class="active">URL</button>
+                <button>EAN</button>
+            </div>
+            <input type="text" placeholder="">
+            <button class="search-btn">
+                🔍
+            </button>
+        </div>
+    </main>
 </body>
 </html>
