--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -48,11 +48,11 @@ main{
 .glass-effect{
     display: flex;
     justify-content: space-between;
-    background: rgba(255, 255, 255, 0.2); /* Fond semi-transparent */
-    backdrop-filter: blur(10px); /* Effet de flou */
-    border-radius: 50px; /* Bords arrondis */
-    border: 1px solid rgba(255, 255, 255, 0.3); /* Bordure subtile */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ombre légère */
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+    border-radius: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     display: flex;
     align-items: center;
     color: black;
@@ -71,7 +71,8 @@ main{
 #container-product{
     display: flex;
     justify-content: space-evenly;
-    align-items: space-evenly;
+    /* align-items: space-evenly; */
+    align-items: stretch;
     flex-wrap: wrap;
 }
 
@@ -79,12 +80,17 @@ main{
     margin: 15px;
 }
 
+.Card {
+    text-decoration: none;
+    color:black
+}
+
 .productCard {
     margin-bottom: 20px;
     padding: 25px 20px 25px;
     width: 200px;
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     flex-direction: column;
     background-color:  rgb(236, 236, 236);
@@ -105,4 +111,23 @@ main{
 
 .fastInformations > * {
     margin: 6px 10px 0;
+}
+
+#sheet{
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 700px;
+    width: 97%;
+    background-color: whitesmoke;
+}
+
+main > button {
+    margin-bottom: 18px;
+}
+
+#img-container > img{
+    width: 473.23px;
+    height: 470px;
 }
