--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,16 +26,18 @@
         </div>
 
         <div id="container-product">
-            {% for product in products %}
+            {% for product in products %}    
                 <div class="productCard">
-                    <div class="futureImg"></div>
-                    <div class="fastInformations">
-                        <p>Nom : {{ product.name }}</p>
-                        <p>Marque : {{ product.brand }}</p>
-                        <p>Volume : {{ product.volume }}</p>
-                        <p>Catégorie : {{ product.categorie }}</p>
-                        <!-- <p>Poids net : {{ product.net_weight }}</p> -->
-                    </div>
+                    <a href="productSheet" class="Card">
+                        <div class="futureImg"></div>
+                        <div class="fastInformations">
+                            <p>Nom : {{ product.name }}</p>
+                            <p>Marque : {{ product.brand }}</p>
+                            <p>Volume : {{ product.volume }}</p>
+                            <p>Catégorie : {{ product.categorie }}</p>
+                            <!-- <p>Poids net : {{ product.net_weight }}</p> -->
+                        </div>
+                    </a>
                 </div>
             {% endfor %}
         </div>
