--- a/app/templates/productSheet.html
+++ b/app/templates/productSheet.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DWS</title>
+    <title>{{ product.name }}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='fontawesome-free-6.7.2-web/css/all.css') }}"> 
 </head> 
 <body>
     <header>
-        <h1>Scraping Extime</h1>
+        <a href="{{ url_for('main.index') }}"><h1>Scraping Extime</h1></a>
         <h2>Dernière mise à jour : XX/XX/XXXX</a>
     </header>
     <main>
@@ -17,13 +17,13 @@
 
         <div id="sheet">
             <div id="informations">
-                <h2>Nom du produits</h2>
-                <p>Catégories : </p>
-                <p>Marque : </p>
-                <p>Volume : </p>
-                <p>Poids net : </p>
-                <div id="material">
-                </div>
+                <h2>{{ product.name }}</h2>
+                <p>Catégorie : {{ product.categorie }}</p>
+                <p>Marque : {{ product.brand }}</p>
+                <p>Volume : {{ product.volume }}</p>
+                <p>Poids net : {{ product.net_weight }}</p>
+                <p>Date de scraping : {{ product.scraped_date}}</p>
+                <div id="material"></div>
             </div>
             <div id="img-container">
                 <img src="../output/image.jpg" alt="image test" />
