--- a/app/templates/productSheet.html
+++ b/app/templates/productSheet.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DWS</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/productSheetStyle.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='fontawesome-free-6.7.2-web/css/all.css') }}"> 
 </head> 
 <body>
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <div id="img-container">
-                <img src="../output/image.jpg" alt="image test" />
+                <img src="{{ url_for('static', filename='images/image.jpg') }}" alt="Description de l'image">
             </div>
         </div>
 
