--- a/app/templates/productSheet.html
+++ b/app/templates/productSheet.html
@@ -21,7 +21,7 @@
                 <p>Catégorie : {{ product.categorie }}</p>
                 <p>Marque : {{ product.brand }}</p>
                 <p>Volume : {{ product.volume }}</p>
-                <p>Poids net : {{ product.net_weight }}</p>
+                <p>{{ product.net_weight }}</p>
                 <p>Date de scraping : {{ product.scraped_date}}</p>
                 <div id="material"></div>
             </div>
