--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,14 +30,13 @@
                 <div class="productCard">
                     <a href="{{ url_for('main.productSheet', product_name=product.name) }}" class="Card"> 
                         <div class="futureImg"> 
-                            <!-- <img src="../output/image.jpg" alt="Description de l'image"> -->
+                            <!-- <img src="{{ url_for('static', filename='images/image.jpg') }}" alt="Description de l'image"> -->
                         </div>
                         <div class="fastInformations">
                             <p>Nom : {{ product.name }}</p>
                             <p>Marque : {{ product.brand }}</p>
                             <p>Volume : {{ product.volume }}</p>
                             <p>Catégorie : {{ product.categorie }}</p>
-                            <!-- <p>Poids net : {{ product.net_weight }}</p> -->
                         </div>
                     </a>
                 </div>
