--- a/app/static/css/searchPageStyle.css
+++ b/app/static/css/searchPageStyle.css
@@ -33,17 +33,6 @@ main{
     height: 15px;
 }
 
-#filtr-container{
-    margin-bottom: 33px;
-    padding: 10px;
-    width: 80px;
-    height: 10px;
-    font-size: large;
-}
-
-#filtr-container > p{
-    padding: 8px;
-}
 
 .glass-effect{
     display: flex;
@@ -101,8 +90,15 @@ main{
 
 .futureImg {
     height: 180px;
-    width: 180px;
+    width: 100%;
     background-color: #151613;
+}
+
+.futureImg > img{
+    background-size: cover;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
 .fastInformations{
