--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,14 +15,10 @@
     <main>
         <div class="search-line">
             <div id="search-container" class="glass-effect">
-                <input type="text" placeholder="">
-                <button id="search-btn"></button><i class="fa-solid fa-magnifying-glass"></i></button>
+                <input type="text" id = "search-input" placeholder="">
+                <button id="search-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
             </div>
 
-            <div id="filtr-container" class="glass-effect">
-                <p>Filtrer  </p>
-                <button id="search-btn"></button><i class="fa-solid fa-caret-down"></i></i></button>
-            </div>
         </div>
 
         <div id="container-product">
