--- a/app/templates/productSheet.html
+++ b/app/templates/productSheet.html
@@ -23,9 +23,16 @@
                 <p>Volume : {{ product.volume }}</p>
                 <p>{{ product.net_weight }}</p>
                 <p>Date de scraping : {{ product.scraped_date}}</p>
+
                 <div id="material">
-                    
+                    <button id="dropdown-btn">Matériau</button>                
+                    <ul id="dropdown-menu" data-value="material" class="dropdown-content">
+                        <li data-value="Aluminium">Aluminium</li>
+                        <li data-value="Or">Or</li>
+                        <li data-value="Vibranium">Vibranium</li>
+                    </ul>
                 </div>
+
                 <button type="button">Sauvegarder</button>
             </div>
             <div id="img-container">
@@ -33,7 +40,7 @@
             </div>
         </div>
 
-        <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/dropdown.js') }}"></script>
     </main>
 </body>
 </html>
