--- a/app/static/css/searchPageStyle.css
+++ b/app/static/css/searchPageStyle.css
@@ -33,6 +33,10 @@ main{
     height: 15px;
 }
 
+#search-btn{
+    cursor: grab;
+}
+
 #filtr-container{
     margin-bottom: 33px;
     padding: 10px;
@@ -129,6 +133,8 @@ main{
     transition: background-color 0.3s ease-in-out;
 }
 
+
+
 .futureImg {
     height: 180px;
     width: 100%;
@@ -150,4 +156,29 @@ main{
 
 .fastInformations > * {
     margin: 6px 10px 0;
+}
+
+#pagination{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#pagiUl{
+    padding: 0;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: whitesmoke;
+    width: 400px;
+    height: 40px;
+
+}
+
+#pagiUl a{
+    text-decoration: none;
+    color: #151613;
+    margin: 0 10px;
+    cursor: grab;
 }
