--- a/app/templates/productSheet.html
+++ b/app/templates/productSheet.html
@@ -34,7 +34,7 @@
                 <button type="button">Sauvegarder</button>
             </div>
             <div id="img-container">
-                <img src="{{ url_for('static', filename='images/image.jpg') }}" alt="Description de l'image">
+                <img src="{{ url_for('static', filename='images/image.webp') }}" alt="Description de l'image">
             </div>
         </div>
 
