--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,11 +20,11 @@
                 <button id="search-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
             </div>
 
-            <div id="filtr-container" class="glass-effect">
+            <!-- <div id="filtr-container" class="glass-effect">
                 <p>Filtrer  </p>
                 <button id="dropdown-btn"><i class="fa-solid fa-caret-down"></i></button>
                 
-            </div>
+            </div> -->
         </div>
 
         <div id="container-product">
