--- a/app/static/css/searchPageStyle.css
+++ b/app/static/css/searchPageStyle.css
@@ -130,6 +130,10 @@ main{
     transition: background-color 0.3s ease-in-out;
 }
 
+.productCard > *{
+    width: 100%;
+}
+
 .futureImg {
     height: 180px;
     width: 100%;
