--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,6 +25,13 @@
                 <button id="dropdown-btn"><i class="fa-solid fa-caret-down"></i></button>
                 
             </div> -->
+                <ul id="dropdown-menu" data-value="category" class="dropdown-content">
+                    <li data-value="Parfum">Parfum</li>
+                    <li data-value="Campagne">Campagne</li>
+                    <li data-value="Vin">Vin</li>
+                    <li data-value="Spiritueux">Spiritueux</li>
+                </ul>
+            </div>
         </div>
 
         <div id="container-product">
