--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,18 +15,14 @@
     <main>
         <div class="search-line">
             <div id="search-container" class="glass-effect">
-
                 <input type="text" id = "search-input" placeholder="">
-
                 <button id="search-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
             </div>
 
             <!-- <div id="filtr-container" class="glass-effect">
                 <p>Filtrer  </p>
                 <button id="dropdown-btn"><i class="fa-solid fa-caret-down"></i></button>
-                
-            </div> -->
-                <!-- <ul id="dropdown-menu" data-value="category" class="dropdown-content">
+                <ul id="dropdown-menu" data-value="category" class="dropdown-content">
                     <li data-value="Parfum">Parfum</li>
                     <li data-value="Campagne">Campagne</li>
                     <li data-value="Vin">Vin</li>
