--- a/app/static/css/searchPageStyle.css
+++ b/app/static/css/searchPageStyle.css
@@ -53,7 +53,7 @@ main{
 #filtr-container{
     padding: 10px;
     width: 90px;
-    height: 10px;
+    height: 15px;
     font-size: large;
     position: relative;
 }
@@ -65,6 +65,8 @@ main{
 #scrap-container{
     padding: 10px;
     width: 190px;
+    display: flex;
+    justify-content: center;
     height: 25px;
     font-size: large;
 }
