--- a/app/static/css/searchPageStyle.css
+++ b/app/static/css/searchPageStyle.css
@@ -16,6 +16,11 @@ header{
     font-family: 'Times New Roman', Times, serif;
 }
 
+header > a{
+    text-decoration: none;
+    color: #d4d4d4;
+}
+
 main{
     padding: 40px;
 }
@@ -33,12 +38,18 @@ main{
     height: 15px;
 }
 
+
+#search-btn{
+    cursor: grab;
+}
+
 #filtr-container{
     margin-bottom: 33px;
     padding: 10px;
     width: 80px;
     height: 10px;
     font-size: large;
+    position: relative;
 }
 
 #filtr-container > p{
@@ -48,11 +59,11 @@ main{
 .glass-effect{
     display: flex;
     justify-content: space-between;
-    background: rgba(255, 255, 255, 0.2); /* Fond semi-transparent */
-    backdrop-filter: blur(10px); /* Effet de flou */
-    border-radius: 50px; /* Bords arrondis */
-    border: 1px solid rgba(255, 255, 255, 0.3); /* Bordure subtile */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ombre légère */
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+    border-radius: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     display: flex;
     align-items: center;
     color: black;
@@ -68,10 +79,40 @@ main{
     width: 85%;
 }
 
+#dropdown-btn {
+    width: 38.19%;
+    height: 50px;
+    text-align: center;
+    font-size: 23px;
+    background: transparent;
+    color: black;
+    display: inline-block;
+}
+
+.dropdown-content {
+    position: absolute;
+    top: 117%;   /*pas toucher !! au MILIMETRE !!! */
+    left: -62%;   /*pas toucher !! au MILIMETRE !!! */
+    background: white;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 8px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    width: 150px;
+    display: none;
+    z-index: 42;
+}
+
+.dropdown-content li {
+    padding: 10px;
+    cursor: pointer;
+}
+
 #container-product{
     display: flex;
     justify-content: space-evenly;
-    align-items: space-evenly;
+    align-items: stretch;
     flex-wrap: wrap;
 }
 
@@ -79,12 +120,17 @@ main{
     margin: 15px;
 }
 
+.Card {
+    text-decoration: none;
+    color:black
+}
+
 .productCard {
     margin-bottom: 20px;
     padding: 25px 20px 25px;
     width: 200px;
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     flex-direction: column;
     background-color:  rgb(236, 236, 236);
@@ -93,10 +139,23 @@ main{
     transition: background-color 0.3s ease-in-out;
 }
 
+.productCard > *{
+    width: 100%;
+}
+
 .futureImg {
     height: 180px;
-    width: 180px;
+    width: 100%;
     background-color: #151613;
+    background-size: cover;
+    object-fit: cover;
+
+}
+.futureImg > img{
+    background-size: cover;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
 .fastInformations{
@@ -107,34 +166,26 @@ main{
     margin: 6px 10px 0;
 }
 
-/* Pagination */
-.pagination {
+#pagination{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 20px 0;
 }
 
-.pagination-link {
-    display: inline-block;
-    padding: 10px 15px;
-    margin: 0 5px;
-    border: 1px solid #007bff; /* Couleur de la bordure */
-    border-radius: 5px; /* Coins arrondis */
-    color: #007bff; /* Couleur du texte */
-    text-decoration: none; /* Pas de soulignement */
-    transition: background-color 0.3s, color 0.3s; /* Transition douce */
+#pagiUl{
+    padding: 0;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 400px;
+    height: 40px;
+
 }
 
-.pagination-link:hover {
-    background-color: #007bff; /* Couleur de fond au survol */
-    color: white; /* Couleur du texte au survol */
-}
-
-.pagination-current {
-    padding: 10px 15px;
-    margin: 0 5px;
-    border-radius: 5px; /* Coins arrondis */
-    background-color: #787878; /* Couleur de fond pour la page actuelle */
-    color: white; /* Couleur du texte pour la page actuelle */
+#pagiUl a{
+    text-decoration: none;
+    color: #151613;
+    margin: 0 10px;
+    cursor: grab;
 }
