--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,67 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DWS</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/searchPageStyle.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='fontawesome-free-6.7.2-web/css/all.css') }}"> 
 </head> 
 <body>
     <header>
-        <h1>Scraping Extime</h1>
+        <a href="{{ url_for('main.index') }}" id="main-link"><h1>Scraping Extime</h1></a>
         <h2>Dernière mise à jour : XX/XX/XXXX</a>
     </header>
     <main>
         <div class="search-line">
-            <form method="GET" action="{{ url_for('main.index') }}">
-                <div id="search-container" class="glass-effect">
-                    <input type="text" name="search" placeholder="Rechercher par nom" value="{{ search_query }}">
-                    <button id="search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-                </div>
-            </form>
-
-            <div id="filtr-container" class="glass-effect">
-                <p>Filtrer  </p>
-                <button id="search-btn"></button><i class="fa-solid fa-caret-down"></i></i></button>
+            <div id="search-container" class="glass-effect">
+                <input type="text" id = "search-input" placeholder="">
+                <button id="search-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
             </div>
+
+            <!-- <div id="filtr-container" class="glass-effect">
+                <p>Filtrer  </p>
+                <button id="dropdown-btn"><i class="fa-solid fa-caret-down"></i></button>
+                <ul id="dropdown-menu" data-value="category" class="dropdown-content">
+                    <li data-value="Parfum">Parfum</li>
+                    <li data-value="Campagne">Campagne</li>
+                    <li data-value="Vin">Vin</li>
+                    <li data-value="Spiritueux">Spiritueux</li>
+                </ul>
+            </div> -->
         </div>
 
         <div id="container-product">
-            {% for product in products %}
-                <div class="productCard">
-                    <div class="futureImg"></div>
-                    <div class="fastInformations">
-                        <p>Nom : {{ product.name }}</p>
-                        <p>Marque : {{ product.brand }}</p>
-                        <p>Volume : {{ product.volume }}</p>
-                        <p>Catégorie : {{ product.categorie }}</p>
-                        <!-- <p>Poids net : {{ product.net_weight }}</p> -->
-                    </div>
-                </div>
-            {% endfor %}
-        </div>
-
-        <!-- Pagination -->
-        <div class="pagination">
-            {% if page > 1 %}
-                <a href="{{ url_for('main.index', page=page-1, search=search_query) }}" class="pagination-link">Précédent</a>
-            {% endif %}
-            
-            {% for p in range(start_page, end_page + 1) %}
-                {% if p == page %}
-                    <span class="pagination-current">{{ p }}</span>
-                {% else %}
-                    <a href="{{ url_for('main.index', page=p, search=search_query) }}" class="pagination-link">{{ p }}</a>
-                {% endif %}
-            {% endfor %}
-            
-            {% if page < total_pages %}
-                <a href="{{ url_for('main.index', page=page+1, search=search_query) }}" class="pagination-link">Suivant</a>
-            {% endif %}
-        </div>
-
-        <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-
         
+        </div>
 
-    </main>
+<div id="pagination">
+    <ul id="pagiUl" class="glass-effect">
+        <li><a href="#" id="previous-link">Précédent</a></li>
+        <tr></tr>
+        <li><span id="pagination-numbers"></span></li>
+        <li><a href="#" id="next-link">Suivant</a></li>
+    </ul>
+</div>
+
+<script src="{{ url_for('static', filename='js/script.js') }}"></script>
+<!-- <script src="{{ url_for('static', filename='js/dropdown.js') }}"></script> -->
+
+</main>
 </body>
 </html>
