--- a/app/templates/productSheet.html
+++ b/app/templates/productSheet.html
@@ -1,8 +1,44 @@
-{% extends "index.html" %}
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ product.name }}</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/productSheetStyle.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='fontawesome-free-6.7.2-web/css/all.css') }}"> 
+</head> 
+<body>
+    <header>
+        <a href="{{ url_for('main.index') }}"><h1>Scraping Extime</h1></a>
+        <h2>Dernière mise à jour : XX/XX/XXXX</a>
+    </header>
+    <main>
+        <div id="sheet">
+            <div id="informations">
+                <h2>{{ product.name }}</h2>
+                <p>Catégorie : {{ product.categorie }}</p>
+                <p>Marque : {{ product.brand }}</p>
+                <p>Volume : {{ product.volume }}</p>
+                <p>{{ product.net_weight }}</p>
+                <p>Date de scraping : {{ product.scraped_date}}</p>
 
-{% block title %}Accueil{% endblock %}
+                <div id="material">
+                    <button id="dropdown-btn">Matériau</button>                
+                    <ul id="dropdown-menu" data-value="material" class="dropdown-content">
+                        <li data-value="Aluminium">Aluminium</li>
+                        <li data-value="Or">Or</li>
+                        <li data-value="Vibranium">Vibranium</li>
+                    </ul>
+                </div>
 
-{% block content %}
-    <h1>Page À Propos</h1>
-    <a href="{{ url_for('main.index') }}">Retour à l'accueil</a>
-{% endblock %}
+                <button type="button">Sauvegarder</button>
+            </div>
+            <div id="img-container">
+                <img src="{{ url_for('static', filename='images/image.webp') }}" alt="Description de l'image">
+            </div>
+        </div>
+
+        <script src="{{ url_for('static', filename='js/dropdown.js') }}"></script>
+    </main>
+</body>
+</html>
