--- a/app/static/css/productSheetStyle.css
+++ b/app/static/css/productSheetStyle.css
@@ -34,7 +34,7 @@ main > button {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 80vh;
+    height: 93vh;
     width: 97%;
     background-color: whitesmoke;
 }
@@ -48,14 +48,29 @@ main > button {
     flex-direction: column;
 }
 
-#informations h2{
-    margin-top: 0;
-    font-size: 3em;
+#form-product{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
 }
 
-#informations > p{
-    margin: 5px;
+#name-product{
+    width: 100%;
+    margin-top: 0;
+    font-size: 3em;
+    font-style: bold;
+}
+
+label, input{
+    width: 61.8%;
     font-size: 23px;
+}
+
+input {
+    margin: 10px 0;
+    background: rgba(255, 255, 255, 0.9);
+    border-radius: 8px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 #material{
@@ -63,7 +78,6 @@ main > button {
 }
 
 #dropdown-btn {
-    margin-top: 15px;
     width: 38.19%;
     height: 50px;
     text-align: center;
@@ -98,7 +112,6 @@ main > button {
 }
 
 #informations > button{
-    margin-top: 1em;
     width: 100%;
     height: 60px;
     text-align: center;
@@ -135,7 +148,7 @@ main > button {
         justify-content: flex-end;
         align-items: center;
         flex-direction: column-reverse;
-        height: 120vh;
+        height: 110vh;
         width: 95%;
     }
     
