--- a/app/templates/productSheet.html
+++ b/app/templates/productSheet.html
@@ -15,12 +15,22 @@
     <main>
         <div id="sheet">
             <div id="informations">
-                <h2>{{ product.name }}</h2>
-                <p>Catégorie : {{ product.categorie }}</p>
-                <p>Marque : {{ product.brand }}</p>
-                <p>Volume : {{ product.volume }}</p>
-                <p>{{ product.net_weight }}</p>
+                <form id="form-product" action="/submit" method="get">
+                    <input id="name-product" type="text" value="{{ product.name }}"></input>
 
+                    <label for="category">Catégorie : </label>
+                    <input id="category" type="text" value="{{ product.categorie }}">
+
+                    <label for="brand">Marque : </label>
+                    <input id="brand" type="text" value="{{ product.brand }}">
+
+                    <label for="volume">Volume : </label>
+                    <input id="volume" type="text" value="{{ product.volume }}">
+
+                    <label for="net_weight">Poids net : </label>
+                    <input id="net_weight" type="text" value="{{ product.net_weight }}">
+                </form>
+                
                 <div id="material">
                     <button id="dropdown-btn">Matériau</button>                
                     <ul id="dropdown-menu" data-value="material" class="dropdown-content">
@@ -30,7 +40,7 @@
                     </ul>
                 </div>
 
-                <button type="button">Sauvegarder</button>
+                <button type="submit">Sauvegarder</button>
             </div>
             <div id="img-container">
                 <img src="{{ url_for('static', filename='images/image.webp') }}" alt="Description de l'image">
