css pagi search

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -48,7 +48,7 @@
             </ul>
         </div>
         <div id="search-pagination" class="pagination-container" style="display: none;">
-            <ul class="glass-effect">
+            <ul id="searchPageUl" class="glass-effect">
                 <li><a href="#" id="previous-search">Précédent</a></li>
                 <li><span id="search-pagination-numbers"></span></li>
                 <li><a href="#" id="next-search">Suivant</a></li>
