--- a/app/static/css/searchPageStyle.css
+++ b/app/static/css/searchPageStyle.css
@@ -211,6 +211,33 @@ main{
     width: 20%;
 }
 
+#search-pagination{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#searchPageUl{
+    padding: 0;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 400px;
+    height: 40px;
+}
+
+#searchPageUl a{
+    text-decoration: none;
+    color: #151613;
+    padding: 0 10px;
+    cursor: grab;
+}
+
+#search-pagination-numbers a {
+    width: 20%;
+}
+
 #overlay{
     position: fixed;
     top: 0;
