--- a/app/templates/productSheet.html
+++ b/app/templates/productSheet.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <a href="{{ url_for('main.index') }}"><h1>Scraping Extime</h1></a>
-        <h2>Dernière mise à jour : XX/XX/XXXX</a>
+        <h2>Dernière mise à jour : {{product.scraped_date}}</h2>
     </header>
     <main>
         <div id="sheet">
