--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <a href="{{ url_for('main.index') }}" id="main-link"><h1>Scraping Extime</h1></a>
-        <h2>Dernière mise à jour : XX/XX/XXXX</a>
+        <h2>Dernière mise à jour : {{ scraped_date }}</h2>
     </header>
     <main>
         <section class="action-line">
@@ -37,6 +37,8 @@
             </div>
             
         </section>
+        <div id="log-output" style="white-space: pre-wrap; background: #f4f4f4; padding: 10px; border: 1px solid #ccc;"></div>
+
 
         <div id="container-product">
         
