--- a/app/static/css/productSheetStyle.css
+++ b/app/static/css/productSheetStyle.css
@@ -23,6 +23,9 @@ header > a{
 
 main{
     padding: 40px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 main > button {
