--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -37,7 +37,7 @@
             </div>
             
         </section>
-        <div id="log-output" style="white-space: pre-wrap; background: #f4f4f4; padding: 10px; border: 1px solid #ccc;"></div>
+        <div id="log-output"></div>
 
 
         <div id="container-product">
