--- a/app/templates/productSheet.html
+++ b/app/templates/productSheet.html
@@ -10,17 +10,45 @@
 <body>
     <header>
         <a href="{{ url_for('main.index') }}"><h1>Scraping Extime</h1></a>
-        <h2>Dernière mise à jour : {{ scraped_date }}</a>
+        <h2>Dernière mise à jour : {{ product.scraped_date }}</a>
     </header>
     <main>
         <div id="sheet">
             <div id="informations">
-                <h2>{{ product.name }}</h2>
-                <p>Catégorie : {{ product.categorie }}</p>
-                <p>Marque : {{ product.brand }}</p>
-                <p>Volume : {{ product.volume }}</p>
-                <p>{{ product.net_weight }}</p>
-                <p>Date de scraping : {{ product.scraped_date}}</p>
+                <form id="form-product" action="/submit" method="get">
+                    <input id="name-product" type="text" value="{{ product.name }}"></input>
+
+                    <label for="">Poids net : </label>
+                    <input id="net_weight" type="text" value="{{ product.net_weight }}">
+
+                    <label for="category">Catégorie : </label>
+                    <input id="category" type="text" value="{{ product.categorie }}">
+
+                    <label for="brand">Marque : </label>
+                    <input id="brand" type="text" value="{{ product.brand }}">
+
+                    <label for="volume">Volume : </label>
+                    <input id="volume" type="text" value="{{ product.volume }}">
+
+                    <label for="net_weight">Dimensions : </label>
+                    <input id="net_weight" type="text" value="{{ product.dimensions }}">
+
+                    <label for="net_weight">Poids net : </label>
+                    <input id="net_weight" type="text" value="{{ product.net_weight }}">
+
+                    <label for="net_weight">Poids net : </label>
+                    <input id="net_weight" type="text" value="{{ product.net_weight }}">
+
+                    <label for="net_weight">Poids net : </label>
+                    <input id="net_weight" type="text" value="{{ product.net_weight }}">
+
+                    <label for="net_weight">Poids net : </label>
+                    <input id="net_weight" type="text" value="{{ product.net_weight }}">
+
+                    <label for="net_weight">Poids net : </label>
+                    <input id="net_weight" type="text" value="{{ product.net_weight }}">materiaux,nom_d_origine,dimensions,status
+
+                </form>
 
                 <div id="material">
                     <button id="dropdown-btn">Matériau</button>                
