--- a/app/templates/productSheet.html
+++ b/app/templates/productSheet.html
@@ -46,13 +46,19 @@
                     <div id="material">
                         <button type="button" id="dropdown-btn">Matériau</button>                
                         <ul id="dropdown-menu" data-value="material" class="dropdown-content">
-                            <li data-value="Verre neutre">Verre neutre</li>
-                            <li data-value="Verre laqué">Verre laqué</li>
-                            <li data-value="Verre teinté masse de mémoire">Verre teinté masse de mémoire</li>
+                            <li data-value="Verre">Verre</li>
+                            <li data-value="Cristal">Cristal</li>
+                            <li data-value="Papier">Papier</li>
+                            <li data-value="Carton">Carton</li>
+                            <li data-value="Cuir">Cuir</li>
+                            <li data-value="Bois">Bois</li>
+                            <li data-value="Plastique">Plastique</li>
+                            <li data-value="Métal">Métal</li>
+
                         </ul>
                     </div>
                     
-                    <button type="submit" id="submit-btn">Sauvegarder</button>
+                    <button type="submit" id="submit-btn" class="glass-effect" >Sauvegarder</button>
 
                 </form>
 
