--- a/app/static/css/searchPageStyle.css
+++ b/app/static/css/searchPageStyle.css
@@ -50,7 +50,7 @@ main{
 #filtr-scrap-container {
     width: 30%;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
 
 }
