--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,23 +21,14 @@
             </div>
 
             <div id="filtr-scrap-container">
-                <div id="filtr-container" class="glass-effect">
-                    <button id="dropdown-btn">Filtrer  <i class="fa-solid fa-caret-down"></i></button>
-                    <ul id="dropdown-menu" data-value="category" class="dropdown-content">
-                        <li data-value="Parfum">Parfum</li>
-                        <li data-value="Campagne">Campagne</li>
-                        <li data-value="Vin">Vin</li>
-                        <li data-value="Spiritueux">Spiritueux</li>
-                    </ul>
-                </div>
-
                 <div id="scrap-container" class="glass-effect">
                     <button id="scrap-btn" type="button">Lancer le scraping <i class="fa-solid fa-globe"></i></button>
                 </div>
             </div>
         </section>
-        <div id="log-output"></div>
-
+        <div id="log-output">
+            
+        </div>
 
         <div id="container-product">
         
