--- a/app/static/css/productSheetStyle.css
+++ b/app/static/css/productSheetStyle.css
@@ -64,9 +64,9 @@ main > button {
     font-style: bold;
 }
 
-label, input{
+label{
     width: 61.8%;
-    font-size: 23px;
+    font-size: 18px;
 }
 
 input {
@@ -74,6 +74,8 @@ input {
     background: rgba(255, 255, 255, 0.9);
     border-radius: 8px;
     border: 1px solid rgba(255, 255, 255, 0.3);
+    width: 61.8%;
+    font-size: 23px;
 }
 
 #material{
@@ -115,7 +117,7 @@ input {
 }
 
 #form-product > button{
-    margin-top: 30px;
+    margin-top: 20px;
     width: 100%;
     height: 60px;
     text-align: center;
@@ -132,6 +134,7 @@ input {
     margin-left: 20px;
     width: 473.23px;
     height: 100%;
+    background-color: white;
     overflow: hidden;
 }
 
@@ -139,7 +142,7 @@ input {
     width: 100%;
     height: 100%;
     background-size: cover;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 
