--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,6 +21,16 @@
             </div>
 
             <div id="filtr-scrap-container">
+                <!-- <div id="filtr-container" class="glass-effect">
+                    <button id="dropdown-btn">Filtrer  <i class="fa-solid fa-caret-down"></i></button>
+                    <ul id="dropdown-menu" data-value="category" class="dropdown-content">
+                        <li data-value="Parfum">Parfum</li>
+                        <li data-value="Campagne">Campagne</li>
+                        <li data-value="Vin">Vin</li>
+                        <li data-value="Spiritueux">Spiritueux</li>
+                    </ul>
+                </div> -->
+
                 <div id="scrap-container" class="glass-effect">
                     <button id="scrap-btn" type="button">Lancer le scraping <i class="fa-solid fa-globe"></i></button>
                 </div>
@@ -41,12 +51,14 @@
                 <li><a href="#" id="next-link">Suivant</a></li>
             </ul>
         </div>
-        <div id="search-pagination" class="pagination-container" style="display: none;">
-            <ul id="searchPageUl" class="glass-effect">
-                <li><a href="#" id="previous-search">Précédent</a></li>
-                <li><span id="search-pagination-numbers"></span></li>
-                <li><a href="#" id="next-search">Suivant</a></li>
-            </ul>
+        <div id="search-pagi-container">
+            <div id="search-pagination" class="pagination-container glass-effect" style="display: none;">
+                <!-- <ul id="searchPageUl" class="glass-effect">
+                    <li><a href="#" id="previous-search">Précédent</a></li>
+                    <li><span id="search-pagination-numbers"></span></li>
+                    <li><a href="#" id="next-search">Suivant</a></li>
+                </ul> -->
+            </div>
         </div>
 
         <div id="overlay" style="display: none;">
@@ -61,8 +73,7 @@
         </div>
         
 
-        <script type="module" src="{{ url_for('static', filename='js/script.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/dropdown.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 <script src="{{ url_for('static', filename='js/alert_modal.js') }}"></script>
 
 </main>
